p2_final_site/revature-alchemy-project-2/force-app/main/default/objects/CustomerOrder__c/CustomerOrder__c.object-meta.xml
<CustomObject>
    <label>CustomerOrder</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>CustomerOrder Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CustomerOrders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>