p2_final_site/revature-alchemy-project-2/force-app/main/default/objects/CustomerOrder__c/fields/BBTCustomerId__c.field-meta.xml
<CustomField>
    <fullName>BBTCustomerId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>BBT Customers</description>
    <label>BBTCustomerId</label>
    <referenceTo>BBTCustomer__c</referenceTo>
    <relationshipLabel>CustomerOrders</relationshipLabel>
    <relationshipName>CustomerOrders</relationshipName>
    <type>Lookup</type>
</CustomField>