p2_final_site/revature-alchemy-project-2/force-app/main/default/objects/CustomerOrder__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CustomerOrders</relationshipName>
    <type>Lookup</type>
</CustomField>